fix: responsiveness on small screens

--- a/src/style/components/LocationFrame.css
+++ b/src/style/components/LocationFrame.css
@@ -64,3 +64,19 @@ iframe {
         height: 130px;
     }
 }
+
+
+@media screen and (max-width: 500px) {
+    .locationFrame {
+        width: 200px;
+        height: 200px;
+        margin-top: 0px;
+        margin-bottom: 10px;
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+
+    iframe {
+        height: 130px;
+    }
+}
