--- a/src/style/pages/Location.css
+++ b/src/style/pages/Location.css
@@ -29,6 +29,6 @@
     }
 
     .local > h1 {
-        padding-bottom: 20px;
+        padding-bottom: 10px;
     }
   }
